--- a/0f0基础1-5网课作业.ipynb
+++ b/0f0基础1-5网课作业.ipynb
@@ -661,66 +661,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Begin: DataApi login 18566262672@tcp://data.quantOS.org:8910\n",
-      "    login success \n",
-      "\n",
-      "Initialize config success.\n",
-      "Query data...\n",
-      "Query data - query...\n",
-      "NOTE: price adjust method is [post adjust]\n",
-      "当前请求daily...\n",
-      "{'adjust_mode': None, 'fields': 'vwap,trade_date,low,close,trade_status,open_adj,low_adj,high,open,close_adj,high_adj,vwap_adj,volume,symbol'}\n",
-      "当前请求daily...\n",
-      "{'adjust_mode': 'post', 'fields': 'vwap,low,close,high,open,symbol,trade_date'}\n",
-      "当前请求query_lb_dailyindicator...\n",
-      "{'fields': 'ps,trade_date,pe,pb,symbol,float_mv'}\n",
-      "WARNING: some data is unavailable: \n",
-      "    At fields \n",
-      "Query data - daily fields prepared.\n",
-      "WARNING: some data is unavailable: \n",
-      "    At fields \n",
-      "Query data - quarterly fields prepared.\n",
-      "Query instrument info...\n",
-      "Query adj_factor...\n",
-      "Query benchmark...\n",
-      "Query benchmar member info...\n",
-      "Query groups (industry)...\n",
-      "Field [trade_status] is overwritten.\n",
-      "Data has been successfully prepared.\n",
-      "\n",
-      "Store data...\n",
-      "Dataview has been successfully saved to:\n",
-      "/Users/liutianming/Documents/demo/OFO-master/Factor\n",
-      "\n",
-      "You can load it with load_dataview('/Users/liutianming/Documents/demo/OFO-master/Factor')\n",
-      "Dataview loaded successfully.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "            symbol   \n",
-       "2014-01-02  000001.SZ    2.5222\n",
-       "            000002.SZ    0.8534\n",
-       "            000008.SZ    8.2431\n",
-       "            000009.SZ    2.9297\n",
-       "            000012.SZ    2.4182\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from jaqs_fxdayu.data import DataView\n",
     "from jaqs_fxdayu.data import RemoteDataService \n",
@@ -728,7 +671,7 @@
     "import warnings\n",
     "import alphalens\n",
     "warnings.filterwarnings(\"ignore\")\n",
-    "dataview_folder = '../Factor'\n",
+    "dataview_folder = 'Factor'\n",
     "if not (os.path.isdir(dataview_folder)):\n",
     "    os.makedirs(dataview_folder)\n",
     "def save_dataview():\n",
@@ -748,7 +691,46 @@
     "    dv.init_from_config(props, ds)\n",
     "    dv.prepare_data()\n",
     "    dv.save_dataview(dataview_folder)\n",
-    "save_dataview()\n",
+    "save_dataview()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "网上下载数据不稳定，本地数据存在Factor文件夹中，可以直接运行下方的代码，倒入本地数据"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataview loaded successfully.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "            symbol   \n",
+       "2014-01-02  000001.SZ    2.5222\n",
+       "            000002.SZ    0.8534\n",
+       "            000008.SZ    8.2431\n",
+       "            000009.SZ    2.9297\n",
+       "            000012.SZ    2.4182\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "dv = DataView()\n",
     "dv.load_dataview(dataview_folder)\n",
     "factor  = dv.get_ts('ps')\n",
@@ -759,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +946,7 @@
        "[5 rows x 483 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
