del 0f0基础1-5网课作业.ipynb

--- a/1、python相关试题.ipynb
+++ b/1、python相关试题.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -182,11 +182,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df.columns, df.T"
+    "#查看列名：df.columns\n",
+    "# 对数据转置：df.T"
    ]
   },
   {
@@ -198,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -318,6 +319,13 @@
    "source": [
     "np.arange(25).reshape(5,5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
